# Python-Learning

./: .gitignore  test.py
Docker Learning/: qna.md
GENAI Learning/Project/PlanMyTrip/: Dockerfile  README.md  docker-compose.yml  folder_structure.md  pyproject.toml
GENAI Learning/Project/PlanMyTrip/app/: main.py
GENAI Learning/Project/PlanMyTrip/app/ai/: checkpointer.py  llm.py  runtime.py  travel_agent.py
GENAI Learning/Project/PlanMyTrip/app/api/: router.py
GENAI Learning/Project/PlanMyTrip/app/capabilities/: __init__.py
GENAI Learning/Project/PlanMyTrip/app/core/: config.py  constants.py  lifespan.py  logging.py
GENAI Learning/Project/PlanMyTrip/app/db/: postgres_client.py  redis_client.py
GENAI Learning/Project/PlanMyTrip/app/dependencies/: app_state.py  providers.py
GENAI Learning/Project/PlanMyTrip/app/docker/: .dockerignore  Dockerfile
GENAI Learning/Project/PlanMyTrip/app/graph/: builder.py  nodes.py  prompts.py  state.py
GENAI Learning/Project/PlanMyTrip/app/schemas/: chat.py
GENAI Learning/Project/PlanMyTrip/app/scripts/: init_checkpointer.py
GENAI Learning/Project/PlanMyTrip/app/services/: chat_service.py
GENAI Learning/Project/PlanMyTrip/app/tools/: __init__.py  travel_tools.py
GENAI Learning/Project/pdfrag_p1/: main.py  pyproject.toml
GENAI Learning/Project/pdfrag_p1/app/core/: config.py  logging.py
GENAI Learning/Project/pdfrag_p1/docs/: file_structure.md  roadmap.md  starter_prompt.md
LangGraph Learning/travel_app/: README.md  pyproject.toml
LangGraph Learning/travel_app/app/: main.py
LangGraph Learning/travel_app/app/graph/: builder.py  constants.py  edges.py  nodes.py  reducers.py  routing.py  state.py
LangGraph Learning/travel_app/app/tools/: travel_tools.py
LangGraph Learning/travel_app/appv2/: main.py
LangGraph Learning/travel_app/appv2/graph/: builder.py  chatbot.py  nodes.py  tool_nodes.py
LangGraph Learning/travel_app/appv2/tools/: travel_tools.py
LangGraph Learning/travel_app/interupt_demo/: main.py
LangGraph Learning/travel_app/interupt_demo/graph/: builder.py  nodes.py  state.py
LangGraph Learning/travel_app/memory_bot/: main.py
LangGraph Learning/travel_app/memory_bot/graph/: builder.py  nodes.py
LangGraph Learning/travel_app/postgres_memory_bot/: docker-compose.yml  requirements.txt
LangGraph Learning/travel_app/postgres_memory_bot/core/: database.py
LangGraph Learning/travel_app/postgres_memory_bot/graph/: builder.py  state.py
RAG_Projects/pdf_rag01/: filestructre.md  main.py  pyproject.toml
RAG_Projects/pdf_rag01/app/core/: config.py  exceptions.py
RAG_Projects/pdf_rag01/app/dependencies/: llm.py
RAG_Projects/pdf_rag01/app/domains/generation/: enums.py  generation_pipeline.py  models.py  router.py  services.py
RAG_Projects/pdf_rag01/app/schemas/: common.py  document.py
(+343 files in other folders)
