[project]
name = "travel-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grandalf>=0.8",
    "langchain-groq>=1.1.3",
    "langchain-xai>=1.2.2",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-postgres>=3.1.0",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
]
