[project]
name = "pdf-rag01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.12",
    "loguru>=0.7.3",
    "pinecone>=9.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "tiktoken>=0.13.0",
    "unstructured[pdf]>=0.24.0",
]
