[project]
name = "planmytrip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "black>=26.5.1",
    "email-validator>=2.3.0",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-postgres>=3.1.0",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "ruff>=0.15.22",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
